--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node prod-server.cjs"
+    "start": "vite preview"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
